# The-AI-Engineer-Challenge

./: .gitignore  ACTIVITIES.md  README.md  deploy-local-uv.sh  deploy-local.bat  deploy-local.sh  pyproject.toml  test-local.sh  uv-setup.md
.cursor/rules/: frontend-rule.mdc  readme-rule.mdc
aie-docs/: rules.mdc
api/: app.py  readme-app-py.md
frontend/: .gitignore  DEPLOYMENT.md  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.next/: trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: _not-found_client-reference-manifest.js  not-found.js  not-found_client-reference-manifest.js  page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  lucide-react.js  next.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: 160ea90c0c5133f5.webpack.hot-update.json  8e2ccfdf6b0a9f2a.webpack.hot-update.json  d3f395d7046d6d6a.webpack.hot-update.json  (+140 more)
frontend/app/: debug.tsx  globals.css  layout.tsx  page.tsx
frontend/app/components/: AppShell.tsx  ChatInput.tsx  ChatWindow.tsx  FormattedMessage.tsx  MessageBubble.tsx  Navbar.tsx  SettingsDrawer.tsx  ThemeToggle.tsx
frontend/app/constants/: index.ts
frontend/app/settings/: page.tsx
frontend/app/store/: useAppStore.ts
frontend/app/types/: index.ts
frontend/app/utils/: api.ts
(+186 files in other folders)
