[project]
name = "simple-openai"
version = "0.1.0"
description = "A full-stack LLM chat application built with FastAPI backend and Next.js frontend"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "openai==1.77.0",
    "pydantic==2.11.4",
    "python-multipart==0.0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]
